<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="test.coachscorner.MainActivity">

    <ImageView
        android:id="@+id/landingPagePic"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <Button
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_or_login_with"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="or sign up using email"/>
    <EditText
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_input"
        android:hint="@string/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_input"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/login_button"
            android:onClick="onClickLogin"
            android:layout_height="match_parent" />
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/register_button"
            android:layout_height="match_parent"
            android:onClick="toRegistration"/>

    </LinearLayout>
</LinearLayout>
