<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="test.coachscorner.RegisterActivity">

    <ImageView
        android:id="@+id/landingPagePic"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="250dp" />
    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstName_input"
        android:hint="@string/registration_firstName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastName_input"
        android:hint="@string/registration_lastName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_input"
        android:hint="@string/registration_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_input"
        android:inputType="textPassword"
        android:hint="@string/registration_password"/>
    <Button
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createAccountNow"
        android:text="Register"/>

</LinearLayout>
